[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/PixelMechaBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/TitleScreenFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://InGame-Menu/InGameMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer"]
pause_mode = 2
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.219608, 0.219608, 0.219608, 0.294118 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 91.0
margin_top = 65.0
margin_right = 228.0
margin_bottom = 114.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 137.0
margin_bottom = 30.0

[node name="MenuLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 38.0
margin_right = 98.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Menu"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 137.0
margin_bottom = 49.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 137.0
margin_bottom = 15.0

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 137.0
margin_bottom = 15.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 137.0
margin_bottom = 15.0

[node name="TitleScreenSelector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 6.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="TitleScreenLabel" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 10.0
margin_right = 137.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Back To Title Screen"
align = 1

[node name="TitleScreenButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/TitleScreenLabel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = -0.222
anchor_right = 1.067
anchor_bottom = 1.0
margin_left = -0.00999928
margin_right = -0.0149994
margin_bottom = 5.0
rect_scale = Vector2( 1, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/TitleScreenLabel/TitleScreenButton" to="." method="_on_TitleScreenButton_pressed"]
